// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`advanced preserves its existing toolbar, options and List projection > mixed=false 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "id": "project_view_list_before",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
              {
                "children": [
                  {
                    "accessibility": {
                      "label": "Audio",
                    },
                    "children": [
                      {
                        "accessibility": {
                          "label": "Audio",
                        },
                        "children": [],
                        "id": "project_view_list_entry_0_hierarchy",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            1,
                          ],
                          "position": [
                            840,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "accessibility": {
                          "label": "Solo",
                        },
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_mute_icon",
                            "kind": "text",
                            "style": {
                              "color": [
                                0,
                                0,
                                0,
                                1,
                              ],
                              "font_size": 18,
                              "font_weight": 700,
                              "line_height": 19,
                              "opacity": 1,
                              "position": [
                                0,
                                0,
                              ],
                              "size": [
                                60,
                                60,
                              ],
                              "text_align": "center",
                              "text_vertical_align": "center",
                              "z_index": 3,
                            },
                            "text": "S",
                          },
                        ],
                        "id": "project_view_list_entry_0_mute",
                        "kind": "button",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "drag": [Function],
                          "long_press": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "style": {
                          "background": [
                            0.23,
                            0.25,
                            0.28,
                            1,
                          ],
                          "position": [
                            780,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "id": "project_view_list_entry_0_name_name",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            0,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            60,
                            60,
                          ],
                        },
                        "text": "Audio",
                        "type": "text",
                      },
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_preview_member_audio_visual",
                                "kind": "panel",
                                "overlayRecord": {
                                  "id": "audio",
                                  "properties": {
                                    "media_duration_seconds": 0,
                                    "media_fit": "contain",
                                    "mute": false,
                                    "object_fit": "contain",
                                    "peaks": [
                                      0.2,
                                      0.8,
                                    ],
                                    "playback_progress_visible": true,
                                    "playback_source_atome_id": "audio",
                                    "solo": false,
                                    "trim_in": 0,
                                    "trim_out": null,
                                  },
                                  "type": "audio",
                                },
                                "overlayRecordLayout": "node_box",
                                "presentation": true,
                                "style": {
                                  "background": [
                                    0,
                                    0,
                                    0,
                                    0,
                                  ],
                                  "position": [
                                    0,
                                    0,
                                  ],
                                  "size": [
                                    720,
                                    60,
                                  ],
                                  "z_index": 5,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_preview_member_audio",
                            "kind": "panel",
                            "presentation": true,
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "overflow": "hidden",
                              "position": [
                                0,
                                0,
                              ],
                              "radius": 0,
                              "size": [
                                720,
                                60,
                              ],
                              "z_index": 4,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_preview",
                        "kind": "pointer_capture",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "double_click": [Function],
                          "drag": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "presentation": true,
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            0,
                          ],
                          "opacity": 1,
                          "overflow": "hidden",
                          "position": [
                            60,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            720,
                            60,
                          ],
                          "z_index": 3,
                        },
                      },
                      {
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_progress_fill",
                            "kind": "panel",
                            "style": {
                              "background": [
                                0.2,
                                0.52,
                                0.44,
                                0.82,
                              ],
                              "origin": [
                                0,
                                0.5,
                              ],
                              "position": [
                                0,
                                0,
                              ],
                              "scale": [
                                0,
                                1,
                              ],
                              "size": [
                                720,
                                3,
                              ],
                              "z_index": 9,
                            },
                          },
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_playhead_bar",
                                "kind": "panel",
                                "style": {
                                  "background": [
                                    0.75,
                                    0.78,
                                    0.8,
                                    1,
                                  ],
                                  "position": [
                                    4,
                                    0,
                                  ],
                                  "size": [
                                    4,
                                    60,
                                  ],
                                  "z_index": 11,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_playhead",
                            "kind": "pointer_capture",
                            "on": {
                              "activate": [Function],
                              "cancel": [Function],
                              "double_click": [Function],
                              "drag": [Function],
                              "press": [Function],
                              "release": [Function],
                            },
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "position": [
                                0,
                                -57,
                              ],
                              "size": [
                                12,
                                60,
                              ],
                              "z_index": 10,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_transport_progress",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            60,
                            57,
                          ],
                          "size": [
                            720,
                            3,
                          ],
                          "z_index": 8,
                        },
                      },
                    ],
                    "id": "project_view_list_entry_0",
                    "kind": "button",
                    "on": {
                      "activate": [Function],
                      "double_click": [Function],
                      "long_press": [Function],
                    },
                    "style": {
                      "background": [
                        0.1946,
                        0.4606,
                        0.4004,
                        1,
                      ],
                      "opacity": 1,
                      "position": [
                        0,
                        0,
                      ],
                      "radius": 0,
                      "size": [
                        900,
                        60,
                      ],
                    },
                  },
                ],
                "id": "project_view_list",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    60,
                  ],
                },
              },
              {
                "children": [],
                "id": "project_view_list_after",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
            ],
            "id": "project_view_list_virtual_content",
            "kind": "column",
            "style": {
              "background": [
                0,
                0,
                0,
                0,
              ],
              "flex_direction": "column",
              "gap": 0,
              "size": [
                900,
                60,
              ],
            },
          },
        ],
        "id": "project_view_list_virtual_list",
        "kind": "scroll_area",
        "on": {
          "scroll": [Function],
        },
        "scrollMotion": {
          "frictionPer16Ms": 0.9,
          "maxVelocityPxPerMs": 1.5,
          "minVelocityPxPerMs": 0.02,
          "velocityBlend": 0.35,
        },
        "scrollbar": {
          "activeOpacity": 0.62,
          "color": [
            1,
            1,
            1,
            0.69,
          ],
          "fadeMs": 120,
          "hideDelayMs": 700,
          "insetPx": 3,
          "minHeightPx": 24,
          "radiusPx": 999,
          "restOpacity": 0,
          "widthPx": 3,
        },
        "style": {
          "background": [
            0,
            0,
            0,
            0,
          ],
          "overflow": "scroll_y",
          "size": [
            900,
            60,
          ],
        },
      },
    ],
    "id": "project_view_list_frame",
    "kind": "panel",
    "style": {
      "background": [
        0,
        0,
        0,
        0,
      ],
      "flex_direction": "column",
      "gap": 0,
      "size": [
        900,
        60,
      ],
    },
  },
]
`;

exports[`advanced preserves its existing toolbar, options and List projection > mixed=true 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "id": "project_view_list_before",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
              {
                "children": [
                  {
                    "accessibility": {
                      "label": "Audio",
                    },
                    "children": [
                      {
                        "accessibility": {
                          "label": "Audio",
                        },
                        "children": [],
                        "id": "project_view_list_entry_0_hierarchy",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            1,
                          ],
                          "position": [
                            840,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "accessibility": {
                          "label": "Solo",
                        },
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_mute_icon",
                            "kind": "text",
                            "style": {
                              "color": [
                                0.95,
                                0.12,
                                0.16,
                                1,
                              ],
                              "font_size": 18,
                              "font_weight": 700,
                              "line_height": 19,
                              "opacity": 1,
                              "position": [
                                0,
                                0,
                              ],
                              "size": [
                                60,
                                60,
                              ],
                              "text_align": "center",
                              "text_vertical_align": "center",
                              "z_index": 3,
                            },
                            "text": "S",
                          },
                        ],
                        "id": "project_view_list_entry_0_mute",
                        "kind": "button",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "drag": [Function],
                          "long_press": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "style": {
                          "background": [
                            0.23,
                            0.25,
                            0.28,
                            1,
                          ],
                          "position": [
                            780,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "id": "project_view_list_entry_0_name_name",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            0,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            60,
                            60,
                          ],
                        },
                        "text": "Audio",
                        "type": "text",
                      },
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_preview_member_audio_visual",
                                "kind": "panel",
                                "overlayRecord": {
                                  "id": "audio",
                                  "properties": {
                                    "media_duration_seconds": 0,
                                    "media_fit": "contain",
                                    "mute": true,
                                    "object_fit": "contain",
                                    "peaks": [
                                      0.2,
                                      0.8,
                                    ],
                                    "playback_progress_visible": true,
                                    "playback_source_atome_id": "audio",
                                    "solo": true,
                                    "trim_in": 0,
                                    "trim_out": null,
                                  },
                                  "type": "audio",
                                },
                                "overlayRecordLayout": "node_box",
                                "presentation": true,
                                "style": {
                                  "background": [
                                    0,
                                    0,
                                    0,
                                    0,
                                  ],
                                  "position": [
                                    0,
                                    0,
                                  ],
                                  "size": [
                                    720,
                                    60,
                                  ],
                                  "z_index": 5,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_preview_member_audio",
                            "kind": "panel",
                            "presentation": true,
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "overflow": "hidden",
                              "position": [
                                0,
                                0,
                              ],
                              "radius": 0,
                              "size": [
                                720,
                                60,
                              ],
                              "z_index": 4,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_preview",
                        "kind": "pointer_capture",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "double_click": [Function],
                          "drag": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "presentation": true,
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            0,
                          ],
                          "opacity": 0.12,
                          "overflow": "hidden",
                          "position": [
                            60,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            720,
                            60,
                          ],
                          "z_index": 3,
                        },
                      },
                      {
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_progress_fill",
                            "kind": "panel",
                            "style": {
                              "background": [
                                0.2,
                                0.52,
                                0.44,
                                0.82,
                              ],
                              "origin": [
                                0,
                                0.5,
                              ],
                              "position": [
                                0,
                                0,
                              ],
                              "scale": [
                                0,
                                1,
                              ],
                              "size": [
                                720,
                                3,
                              ],
                              "z_index": 9,
                            },
                          },
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_playhead_bar",
                                "kind": "panel",
                                "style": {
                                  "background": [
                                    0.75,
                                    0.78,
                                    0.8,
                                    1,
                                  ],
                                  "position": [
                                    4,
                                    0,
                                  ],
                                  "size": [
                                    4,
                                    60,
                                  ],
                                  "z_index": 11,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_playhead",
                            "kind": "pointer_capture",
                            "on": {
                              "activate": [Function],
                              "cancel": [Function],
                              "double_click": [Function],
                              "drag": [Function],
                              "press": [Function],
                              "release": [Function],
                            },
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "position": [
                                0,
                                -57,
                              ],
                              "size": [
                                12,
                                60,
                              ],
                              "z_index": 10,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_transport_progress",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            60,
                            57,
                          ],
                          "size": [
                            720,
                            3,
                          ],
                          "z_index": 8,
                        },
                      },
                    ],
                    "id": "project_view_list_entry_0",
                    "kind": "button",
                    "on": {
                      "activate": [Function],
                      "double_click": [Function],
                      "long_press": [Function],
                    },
                    "style": {
                      "background": [
                        0.1946,
                        0.4606,
                        0.4004,
                        1,
                      ],
                      "opacity": 1,
                      "position": [
                        0,
                        0,
                      ],
                      "radius": 0,
                      "size": [
                        900,
                        60,
                      ],
                    },
                  },
                ],
                "id": "project_view_list",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    60,
                  ],
                },
              },
              {
                "children": [],
                "id": "project_view_list_after",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
            ],
            "id": "project_view_list_virtual_content",
            "kind": "column",
            "style": {
              "background": [
                0,
                0,
                0,
                0,
              ],
              "flex_direction": "column",
              "gap": 0,
              "size": [
                900,
                60,
              ],
            },
          },
        ],
        "id": "project_view_list_virtual_list",
        "kind": "scroll_area",
        "on": {
          "scroll": [Function],
        },
        "scrollMotion": {
          "frictionPer16Ms": 0.9,
          "maxVelocityPxPerMs": 1.5,
          "minVelocityPxPerMs": 0.02,
          "velocityBlend": 0.35,
        },
        "scrollbar": {
          "activeOpacity": 0.62,
          "color": [
            1,
            1,
            1,
            0.69,
          ],
          "fadeMs": 120,
          "hideDelayMs": 700,
          "insetPx": 3,
          "minHeightPx": 24,
          "radiusPx": 999,
          "restOpacity": 0,
          "widthPx": 3,
        },
        "style": {
          "background": [
            0,
            0,
            0,
            0,
          ],
          "overflow": "scroll_y",
          "size": [
            900,
            60,
          ],
        },
      },
    ],
    "id": "project_view_list_frame",
    "kind": "panel",
    "style": {
      "background": [
        0,
        0,
        0,
        0,
      ],
      "flex_direction": "column",
      "gap": 0,
      "size": [
        900,
        60,
      ],
    },
  },
]
`;

exports[`advanced preserves its existing toolbar, options and List projection 1`] = `
{
  "behaviors": {
    "auto_reframe": true,
    "default_view_mode": "",
    "gesture_shortcuts": true,
    "menu_recall": "invisible_zone",
  },
  "items": [
    {
      "icon": "./assets/images/icons/atome.svg",
      "id": "eve_bevy_ui_main_menu_tool_atome",
      "key": "atome",
      "label": "atome",
      "toolId": "voice.assistant.toggle",
      "type": "tool",
    },
  ],
  "options": Set {
    "select",
    "toggle",
    "navigate",
    "rename",
    "preview",
    "reorder",
    "row_menu",
    "mute",
    "mix_all_none",
    "clip_edit",
    "solo",
    "mix_strength",
  },
  "visibility": {
    "hiddenChildren": Set {},
    "roots": [
      "organize",
      "capture",
      "create",
      "find",
      "communicate",
      "calendar",
      "view",
      "help",
      "contact",
    ],
  },
}
`;

exports[`intermediate preserves its existing toolbar, options and List projection > mixed=false 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "id": "project_view_list_before",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
              {
                "children": [
                  {
                    "accessibility": {
                      "label": "Audio",
                    },
                    "children": [
                      {
                        "accessibility": {
                          "label": "Audio",
                        },
                        "children": [],
                        "id": "project_view_list_entry_0_hierarchy",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            1,
                          ],
                          "position": [
                            840,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "accessibility": {
                          "label": "Muet",
                        },
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_mute_icon",
                            "kind": "text",
                            "style": {
                              "color": [
                                0.58,
                                0.6,
                                0.63,
                                1,
                              ],
                              "font_size": 18,
                              "font_weight": 700,
                              "line_height": 19,
                              "opacity": 1,
                              "position": [
                                0,
                                0,
                              ],
                              "size": [
                                60,
                                60,
                              ],
                              "text_align": "center",
                              "text_vertical_align": "center",
                              "z_index": 3,
                            },
                            "text": "M",
                          },
                        ],
                        "id": "project_view_list_entry_0_mute",
                        "kind": "button",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "drag": [Function],
                          "long_press": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "style": {
                          "background": [
                            0.23,
                            0.25,
                            0.28,
                            1,
                          ],
                          "position": [
                            780,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "id": "project_view_list_entry_0_name_name",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            0,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            60,
                            60,
                          ],
                        },
                        "text": "Audio",
                        "type": "text",
                      },
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_preview_member_audio_visual",
                                "kind": "panel",
                                "overlayRecord": {
                                  "id": "audio",
                                  "properties": {
                                    "media_duration_seconds": 0,
                                    "media_fit": "contain",
                                    "mute": false,
                                    "object_fit": "contain",
                                    "peaks": [
                                      0.2,
                                      0.8,
                                    ],
                                    "playback_progress_visible": true,
                                    "playback_source_atome_id": "audio",
                                    "solo": false,
                                    "trim_in": 0,
                                    "trim_out": null,
                                  },
                                  "type": "audio",
                                },
                                "overlayRecordLayout": "node_box",
                                "presentation": true,
                                "style": {
                                  "background": [
                                    0,
                                    0,
                                    0,
                                    0,
                                  ],
                                  "position": [
                                    0,
                                    0,
                                  ],
                                  "size": [
                                    720,
                                    60,
                                  ],
                                  "z_index": 5,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_preview_member_audio",
                            "kind": "panel",
                            "presentation": true,
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "overflow": "hidden",
                              "position": [
                                0,
                                0,
                              ],
                              "radius": 0,
                              "size": [
                                720,
                                60,
                              ],
                              "z_index": 4,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_preview",
                        "kind": "pointer_capture",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "double_click": [Function],
                          "drag": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "presentation": true,
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            0,
                          ],
                          "opacity": 1,
                          "overflow": "hidden",
                          "position": [
                            60,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            720,
                            60,
                          ],
                          "z_index": 3,
                        },
                      },
                      {
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_progress_fill",
                            "kind": "panel",
                            "style": {
                              "background": [
                                0.2,
                                0.52,
                                0.44,
                                0.82,
                              ],
                              "origin": [
                                0,
                                0.5,
                              ],
                              "position": [
                                0,
                                0,
                              ],
                              "scale": [
                                0,
                                1,
                              ],
                              "size": [
                                720,
                                3,
                              ],
                              "z_index": 9,
                            },
                          },
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_playhead_bar",
                                "kind": "panel",
                                "style": {
                                  "background": [
                                    0.75,
                                    0.78,
                                    0.8,
                                    1,
                                  ],
                                  "position": [
                                    4,
                                    0,
                                  ],
                                  "size": [
                                    4,
                                    60,
                                  ],
                                  "z_index": 11,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_playhead",
                            "kind": "pointer_capture",
                            "on": {
                              "activate": [Function],
                              "cancel": [Function],
                              "double_click": [Function],
                              "drag": [Function],
                              "press": [Function],
                              "release": [Function],
                            },
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "position": [
                                0,
                                -57,
                              ],
                              "size": [
                                12,
                                60,
                              ],
                              "z_index": 10,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_transport_progress",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            60,
                            57,
                          ],
                          "size": [
                            720,
                            3,
                          ],
                          "z_index": 8,
                        },
                      },
                    ],
                    "id": "project_view_list_entry_0",
                    "kind": "button",
                    "on": {
                      "activate": [Function],
                      "double_click": [Function],
                      "long_press": [Function],
                    },
                    "style": {
                      "background": [
                        0.1946,
                        0.4606,
                        0.4004,
                        1,
                      ],
                      "opacity": 1,
                      "position": [
                        0,
                        0,
                      ],
                      "radius": 0,
                      "size": [
                        900,
                        60,
                      ],
                    },
                  },
                ],
                "id": "project_view_list",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    60,
                  ],
                },
              },
              {
                "children": [],
                "id": "project_view_list_after",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
            ],
            "id": "project_view_list_virtual_content",
            "kind": "column",
            "style": {
              "background": [
                0,
                0,
                0,
                0,
              ],
              "flex_direction": "column",
              "gap": 0,
              "size": [
                900,
                60,
              ],
            },
          },
        ],
        "id": "project_view_list_virtual_list",
        "kind": "scroll_area",
        "on": {
          "scroll": [Function],
        },
        "scrollMotion": {
          "frictionPer16Ms": 0.9,
          "maxVelocityPxPerMs": 1.5,
          "minVelocityPxPerMs": 0.02,
          "velocityBlend": 0.35,
        },
        "scrollbar": {
          "activeOpacity": 0.62,
          "color": [
            1,
            1,
            1,
            0.69,
          ],
          "fadeMs": 120,
          "hideDelayMs": 700,
          "insetPx": 3,
          "minHeightPx": 24,
          "radiusPx": 999,
          "restOpacity": 0,
          "widthPx": 3,
        },
        "style": {
          "background": [
            0,
            0,
            0,
            0,
          ],
          "overflow": "scroll_y",
          "size": [
            900,
            60,
          ],
        },
      },
    ],
    "id": "project_view_list_frame",
    "kind": "panel",
    "style": {
      "background": [
        0,
        0,
        0,
        0,
      ],
      "flex_direction": "column",
      "gap": 0,
      "size": [
        900,
        60,
      ],
    },
  },
]
`;

exports[`intermediate preserves its existing toolbar, options and List projection > mixed=true 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "id": "project_view_list_before",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
              {
                "children": [
                  {
                    "accessibility": {
                      "label": "Audio",
                    },
                    "children": [
                      {
                        "accessibility": {
                          "label": "Audio",
                        },
                        "children": [],
                        "id": "project_view_list_entry_0_hierarchy",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            1,
                          ],
                          "position": [
                            840,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "accessibility": {
                          "label": "Muet",
                        },
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_mute_icon",
                            "kind": "text",
                            "style": {
                              "color": [
                                0.95,
                                0.75,
                                0.08,
                                1,
                              ],
                              "font_size": 18,
                              "font_weight": 700,
                              "line_height": 19,
                              "opacity": 1,
                              "position": [
                                0,
                                0,
                              ],
                              "size": [
                                60,
                                60,
                              ],
                              "text_align": "center",
                              "text_vertical_align": "center",
                              "z_index": 3,
                            },
                            "text": "M",
                          },
                        ],
                        "id": "project_view_list_entry_0_mute",
                        "kind": "button",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "drag": [Function],
                          "long_press": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "style": {
                          "background": [
                            0.23,
                            0.25,
                            0.28,
                            1,
                          ],
                          "position": [
                            780,
                            0,
                          ],
                          "size": [
                            60,
                            60,
                          ],
                          "z_index": 2,
                        },
                      },
                      {
                        "id": "project_view_list_entry_0_name_name",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            0,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            60,
                            60,
                          ],
                        },
                        "text": "Audio",
                        "type": "text",
                      },
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_preview_member_audio_visual",
                                "kind": "panel",
                                "overlayRecord": {
                                  "id": "audio",
                                  "properties": {
                                    "media_duration_seconds": 0,
                                    "media_fit": "contain",
                                    "mute": true,
                                    "object_fit": "contain",
                                    "peaks": [
                                      0.2,
                                      0.8,
                                    ],
                                    "playback_progress_visible": true,
                                    "playback_source_atome_id": "audio",
                                    "solo": true,
                                    "trim_in": 0,
                                    "trim_out": null,
                                  },
                                  "type": "audio",
                                },
                                "overlayRecordLayout": "node_box",
                                "presentation": true,
                                "style": {
                                  "background": [
                                    0,
                                    0,
                                    0,
                                    0,
                                  ],
                                  "position": [
                                    0,
                                    0,
                                  ],
                                  "size": [
                                    720,
                                    60,
                                  ],
                                  "z_index": 5,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_preview_member_audio",
                            "kind": "panel",
                            "presentation": true,
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "overflow": "hidden",
                              "position": [
                                0,
                                0,
                              ],
                              "radius": 0,
                              "size": [
                                720,
                                60,
                              ],
                              "z_index": 4,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_preview",
                        "kind": "pointer_capture",
                        "on": {
                          "activate": [Function],
                          "cancel": [Function],
                          "double_click": [Function],
                          "drag": [Function],
                          "press": [Function],
                          "release": [Function],
                        },
                        "presentation": true,
                        "style": {
                          "background": [
                            0,
                            0,
                            0,
                            0,
                          ],
                          "opacity": 0.12,
                          "overflow": "hidden",
                          "position": [
                            60,
                            0,
                          ],
                          "radius": 0,
                          "size": [
                            720,
                            60,
                          ],
                          "z_index": 3,
                        },
                      },
                      {
                        "children": [
                          {
                            "children": [],
                            "id": "project_view_list_entry_0_progress_fill",
                            "kind": "panel",
                            "style": {
                              "background": [
                                0.2,
                                0.52,
                                0.44,
                                0.82,
                              ],
                              "origin": [
                                0,
                                0.5,
                              ],
                              "position": [
                                0,
                                0,
                              ],
                              "scale": [
                                0,
                                1,
                              ],
                              "size": [
                                720,
                                3,
                              ],
                              "z_index": 9,
                            },
                          },
                          {
                            "children": [
                              {
                                "children": [],
                                "id": "project_view_list_entry_0_playhead_bar",
                                "kind": "panel",
                                "style": {
                                  "background": [
                                    0.75,
                                    0.78,
                                    0.8,
                                    1,
                                  ],
                                  "position": [
                                    4,
                                    0,
                                  ],
                                  "size": [
                                    4,
                                    60,
                                  ],
                                  "z_index": 11,
                                },
                              },
                            ],
                            "id": "project_view_list_entry_0_playhead",
                            "kind": "pointer_capture",
                            "on": {
                              "activate": [Function],
                              "cancel": [Function],
                              "double_click": [Function],
                              "drag": [Function],
                              "press": [Function],
                              "release": [Function],
                            },
                            "style": {
                              "background": [
                                0,
                                0,
                                0,
                                0,
                              ],
                              "position": [
                                0,
                                -57,
                              ],
                              "size": [
                                12,
                                60,
                              ],
                              "z_index": 10,
                            },
                          },
                        ],
                        "id": "project_view_list_entry_0_transport_progress",
                        "kind": "panel",
                        "style": {
                          "background": [
                            0.17,
                            0.19,
                            0.22,
                            0.7,
                          ],
                          "position": [
                            60,
                            57,
                          ],
                          "size": [
                            720,
                            3,
                          ],
                          "z_index": 8,
                        },
                      },
                    ],
                    "id": "project_view_list_entry_0",
                    "kind": "button",
                    "on": {
                      "activate": [Function],
                      "double_click": [Function],
                      "long_press": [Function],
                    },
                    "style": {
                      "background": [
                        0.1946,
                        0.4606,
                        0.4004,
                        1,
                      ],
                      "opacity": 1,
                      "position": [
                        0,
                        0,
                      ],
                      "radius": 0,
                      "size": [
                        900,
                        60,
                      ],
                    },
                  },
                ],
                "id": "project_view_list",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    60,
                  ],
                },
              },
              {
                "children": [],
                "id": "project_view_list_after",
                "kind": "panel",
                "style": {
                  "background": [
                    0,
                    0,
                    0,
                    0,
                  ],
                  "size": [
                    900,
                    0,
                  ],
                },
              },
            ],
            "id": "project_view_list_virtual_content",
            "kind": "column",
            "style": {
              "background": [
                0,
                0,
                0,
                0,
              ],
              "flex_direction": "column",
              "gap": 0,
              "size": [
                900,
                60,
              ],
            },
          },
        ],
        "id": "project_view_list_virtual_list",
        "kind": "scroll_area",
        "on": {
          "scroll": [Function],
        },
        "scrollMotion": {
          "frictionPer16Ms": 0.9,
          "maxVelocityPxPerMs": 1.5,
          "minVelocityPxPerMs": 0.02,
          "velocityBlend": 0.35,
        },
        "scrollbar": {
          "activeOpacity": 0.62,
          "color": [
            1,
            1,
            1,
            0.69,
          ],
          "fadeMs": 120,
          "hideDelayMs": 700,
          "insetPx": 3,
          "minHeightPx": 24,
          "radiusPx": 999,
          "restOpacity": 0,
          "widthPx": 3,
        },
        "style": {
          "background": [
            0,
            0,
            0,
            0,
          ],
          "overflow": "scroll_y",
          "size": [
            900,
            60,
          ],
        },
      },
    ],
    "id": "project_view_list_frame",
    "kind": "panel",
    "style": {
      "background": [
        0,
        0,
        0,
        0,
      ],
      "flex_direction": "column",
      "gap": 0,
      "size": [
        900,
        60,
      ],
    },
  },
]
`;

exports[`intermediate preserves its existing toolbar, options and List projection 1`] = `
{
  "behaviors": {
    "auto_reframe": true,
    "default_view_mode": "",
    "gesture_shortcuts": true,
    "menu_recall": "visible_marker",
  },
  "items": [
    {
      "icon": "./assets/images/icons/atome.svg",
      "id": "eve_bevy_ui_main_menu_tool_atome",
      "key": "atome",
      "label": "atome",
      "toolId": "voice.assistant.toggle",
      "type": "tool",
    },
  ],
  "options": Set {
    "select",
    "toggle",
    "navigate",
    "rename",
    "preview",
    "reorder",
    "row_menu",
    "mute",
    "mix_all_none",
    "clip_edit",
  },
  "visibility": {
    "hiddenChildren": Set {},
    "roots": [
      "organize",
      "capture",
      "create",
      "find",
      "communicate",
      "calendar",
      "view",
      "help",
      "contact",
    ],
  },
}
`;
